01-node-metrics/10-node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: node-metrics
  labels:
    app.kubernetes.io/name: node-exporter
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: node-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
